@@ -1,3 +1,5 @@
+2007/10/16
+	1. Added a class in unitTesting to test whether a configuration constraint is a projection.
 2007/10/10
 	kwsPlus release 1.1
 	
